# PathtracerBenchmark

./: .gitignore  CMakeLists.txt  NewPathtracerExplanation.md  PLAN.md  README.md  auto-setup.bat  auto-vulkan-setup.bat  implementation_plan.md  nvns.bat  run.bat  sahkdtree.md  task.md
Guides/: BVHTesting.md  IncreaseTDR.md  sahbvh.md
debug/: KdtreeDebug.blend
src/: CLI.cpp  CLI.h  Main.cpp  Pathtracer.h  PathtracerSettings.h  Renderer.h  View.h  Vulkan.h
src/include/: Helper.h
src/include/acceleration_structures/: AccelerationStructure.cpp  AccelerationStructure.h  BVH.cpp  BVH.h  BVH4.cpp  BVH4.h  KdTree.cpp  KdTree.h  KdTreeBinned.cpp  KdTreeBinned.h
src/include/compute_backends/: CUDA.cpp  CUDA.h  ComputeBackend.cpp  ComputeBackend.h  SPIRV.cpp  SPIRV.h
src/include/io/: OBJLoader.cpp  OBJLoader.h
src/include/vulkan/: Shader.h
src/models/: AccelerationStructure.cpp  AccelerationStructure.h  BVH.cpp  BVH.h  EXR.cpp  EXR.h  Helper.h  KdTree-NoClip.cpp  KdTree.cpp  KdTree.h  KdTreeBinned.cpp  KdTreeBinned.h  OBJLoader.cpp  OBJLoader.h  PPM.cpp  PPM.h
src/models/acceleration_structures/: AccelerationStructure.h  BVH.h  BVH4.cpp  BVH4.h  KdTree.h  KdTreeBinned.h
src/models/compute_backends/: CUDA.cpp  CUDA.h  ComputeBackend.h  SPIRV.h
src/models/io/: OBJLoader.h
src/models/vulkan/: Buffer.h  Shader.h  Vulkan.h
src/resources/: vertices.txt
src/resources/3DModels/: sibenik2.mtl
src/resources/Shaders/: frag.spv  pathtracer.comp  pathtracer.spv  quad.frag  quad.vert  runtime_compile.bat  vert.spv
src/resources/kernel/: PathtracerKernel.h  cuda_math.h  pathtracer.cu  pathtracer.cubin  pathtracer_kernel_types.h  runtime_compiler.bat
src/resources/outputs/: benchmark.csv  cornellbox-ref-g.ppm  cornellbox-ref.ppm  out2png.bat  output-g.ppm  output.ppm  ppm2png.bat  sibenik2-1024-g.ppm  sibenik2-1024.ppm  stats.txt
src/resources/outputs/cornell_box/: cornelbox-ref.txt  cornell_box-refstats.txt  imgref-benchmark.txt  output-spp1-r1024x1024-lb12-vulkan-bvh.ppm  output-spp1024-r1024x1024-lb12-vulkan-bvh.ppm  output-spp16-r1024x1024-lb12-vulkan-bvh.ppm  output-spp16384-r1024x1024-lb12-vulkan-bvh.ppm  output-spp256-r1024x1024-lb12-vulkan-bvh.ppm  output-spp4-r1024x1024-lb12-vulkan-bvh.ppm  output-spp4096-r1024x1024-lb12-vulkan-bvh.ppm  output-spp64-r1024x1024-lb12-vulkan-bvh.ppm  output.ppm  ref.ppm
src/resources/scenes/: bistro.mtl  bunny-cbx.mtl  cornell_box.mtl  lucy-cbx.mtl  sibenik2.mtl  sponza2.mtl
src/resources/shaders/: pathtracer.comp  pathtracer.spv  quad.frag  quad.vert
tests/: README.md
tests/benchmarks/: BuildSanity.cpp  README.md
tests/fixtures/: MeshFactory.h
tests/unit/: AccelerationStructureSmoke.cpp  BVHTests.cpp  KdTreeTests.cpp  MockSanity.cpp
